changing the place of accounts
Former-commit-id: 3a746bec29bacd22482f388b0785b0b59771b344 [formerly 74dead0cd471373e191a8cca4ab4fd0fa889f9ea] [formerly c246d977e6d442d2f943b828120f4abac1f22229 [formerly 3b3a4a3089adcd5fc6b1137b9ee660d5023e181d]]
Former-commit-id: efb4ff1b115a3fce3fedc2a9f824d0e912620dab [formerly 2ecf48c13f63c18b36063aa4458a6e2b18d96e27]
Former-commit-id: 32af6c50f47868180bd6508a79b616db403d5493

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -15,12 +15,12 @@
         </div>
     </div>
     <div class=" subHeaderContent">
-        <div class="pull-right sharebuttonDiv">
+       <!-- <div class="pull-right sharebuttonDiv">
             <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
                 <i class="icon-lock"></i>
                 {{ _("Share")}}
             </a>
-        </div>
+        </div>-->
         <h2 class="page-title" >
             <a href="/#/accounts/" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Accounts">
                 <img onload="this.__gwtLastUnhandledEvent = & quot;
@@ -90,7 +90,17 @@
                                                 <%= account.name %>
                                             </a>
                                         </span>
-                                      </li>                                      
+                                      </li>   
+                                         <li>
+                                            <br>
+                                            <div class="pull-right sharebuttonDiv">
+                                                <a href="#sharingSettingsModal" class="btn blue btn-sm jfk-button jfk-button-action" data-toggle="modal">
+                                                  <i class="icon-share"></i>
+                                                  {{_('Share')}}
+                                                </a>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </li>                                   
                                     </ul>
 
 
