New topic must works (red Button) fix #1545 , Blank state if there is no topics fix #1544
Former-commit-id: 8958c02e7baedc5fd98fdc28fd9498f76077e0d8 [formerly 2e79bf4907336b683ded6d0cebe32ef4b0bf5f50] [formerly 753e47d20c7e6959f5af7ed4a5ed59a4db7f5c56 [formerly 8d6b78c77272579a76282a921bd4a2637b0e6efb]]
Former-commit-id: 02ee17be13c37e6cd48b5c1b4867e49f5fcb0d70 [formerly 489ff759d96da6a8fe03365714764fbdd31a7575]
Former-commit-id: efde35eabe385428c40f6263c47813a59d510d79

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -249,11 +249,11 @@
                 </p>
               </a>
               </div>
-              <div class="pitch">
+             <!--  <div class="pitch">
                 <span  class="contact-title" >
                   <%=fromNow(tweet.created_at)%>
                 </span>
-              </div>
+              </div> -->
          
               <div class="clearfix"></div>
           </div>
