--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -125,6 +125,7 @@
                   <span  ng-drag="dragTag(tag_item)" draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
                       <%= tag_item.name %>
                   </span>
+
                    <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
                   <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
                     <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
@@ -328,23 +329,32 @@
     <div class="portlet showCard fixedCard">
       <div class="portlet-title">
         <div class="caption">
-                <!-- class="fa fa-reorder"--><i></i>{{_("Topics")}}
+                <!-- class="fa fa-reorder"--><i></i>{{_("Filter by Topics")}}
         </div>  
       </div>
       <div class="portlet-body">
 <div class="row">
-        <ul id="slimList" class="list-group tags-list ">
+        <ul id="slimList" class="list-group tags-list relatedTags discoveryTags">
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
-              <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable class="with-color" ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;" 
-
+            <div class="with-color" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;display: inline-block;float: left;">
+                 <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" ng-hide="tag_item==edited_tag"></a> 
+              <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable  ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"  
                   ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                
                   <%= tag_item.name %>
 
               </span>
-
-              <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()">
+            </div>
+              <div class="customCheckbox CustomSmallCheck pull-right" >  
+              <input ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="isSelected()"  class="checkbox" id="discoveryTag_<%=$index%>"  ng-click="selectTag(tag_item,$index,$event)" >             
+              <label for="discoveryTag_<%=$index%>" class="labelElement">
+                <span class="check"></span>
+                <span class="box"></span>
+              </label>  
+          </div>
+          
+             <!--  <input type="checkbox" ng-show="!manage_tags" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()"> -->
               <!--<span class="pull-right tag-checked" ng-show="selected_tags.indexOf(tag_item) != -1">
                   <i class="fa fa-check-circle-o" style="color:idealTextColor(<%=tag_item.color%>);"></i>
               </span>-->
@@ -355,15 +365,15 @@
             </div>
           </li>
           </ul>
-          <li class="list-group-item tags-list-item" ng-hide="showNewTag"  style="border:none;margin-bottom:5px;" ng-click="showNewTag=true">
+     <!--      <li class="list-group-item tags-list-item" ng-hide="showNewTag"  style="border:none;margin-bottom:5px;" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  {{ _('Add a new topic')}}
             </a>
-          </li>
+          </li> -->
 
         </div>
-        <form class="well newTagForm" role="form" ng-show="showNewTag">
-          <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
+        <form class="well newTagForm" role="form" >
+       <!--    <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button> -->
           <div class="row">
             <div class="col-md-12 form-group">
 
@@ -383,10 +393,10 @@
             </div>
           </div>
         </form>
-        <div class="form-group btn-manage-tags" ng-show="tags">
+    <!--     <div class="form-group btn-manage-tags" ng-show="tags">
           <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">{{ _('Manage Topics')}}
           </button>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
