reply to tweets in discovery fix #1549 when deleting topics stop crawler fix #1550
Former-commit-id: d4d1f7e60cdf25631c7a2e3cbb579ee6940e3b45 [formerly 40c65a48de4ecdcc92e6c7f4c4367869b778a83e] [formerly 83d3ff5fbaac767651180701b7233dd1e141fadb [formerly e34ca83a225a89bbc0d705a024b6838507a509d1]]
Former-commit-id: c9f54667b370e23c2c1ed11299839b9cd8fff380 [formerly 0759d3ab0189e370d9669237751e7ed92b4a7fbf]
Former-commit-id: 64b53c10a201ab76ac3a9d3573a00db88582609e

--- a/templates/discovers/discover_show.html
+++ b/templates/discovers/discover_show.html
@@ -244,7 +244,7 @@
                         <ul class="list-unstyled contact-infos">
                                                 
                                                     <li>
-                                                        <a target="new" href="http://twitter.com/<%=tweet_details.screen_name %>">http://twitter.com/<%=tweet_details._source.user.screen_name %></a>
+                                                        <a target="new" href="http://twitter.com/<%=tweet_details._source.user.screen_name %>">http://twitter.com/<%=tweet_details._source.user.screen_name %></a>
                                                    </li>
                                                 </ul>                      
                            
