--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -334,11 +334,11 @@
       </div>
       <div class="portlet-body">
 <div class="row">
-        <ul id="slimList" class="list-group tags-list relatedTags discoveryTags">
+        <ul id="slimList" class="list-group tags-list relatedTags discoveryTags" style="margin-right: 8px;">
           <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
             <div class="row">
             <div class="with-color" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;display: inline-block;float: left;">
-                 <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" ng-hide="tag_item==edited_tag"></a> 
+                 <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" ng-hide="hideCheckBox"></a> 
               <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable  ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"  
                   ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                
@@ -346,7 +346,7 @@
 
               </span>
             </div>
-              <div class="customCheckbox CustomSmallCheck pull-right" >  
+            <div class="customCheckbox CustomSmallCheck pull-right" ng-hide="hideCheckBox">  
               <input ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="isSelected()"  class="checkbox" id="discoveryTag_<%=$index%>"  ng-click="selectTag(tag_item,$index,$event)" >             
               <label for="discoveryTag_<%=$index%>" class="labelElement">
                 <span class="check"></span>
@@ -372,7 +372,7 @@
           </li> -->
 
         </div>
-        <form class="well newTagForm" role="form" >
+        <form class=" newTagForm" role="form" >
        <!--    <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button> -->
           <div class="row">
             <div class="col-md-12 form-group">
@@ -382,13 +382,13 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
               <ul class="color_pallet_menu">
                 <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
                 </li>
               </ul>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
             </div>
           </div>
