--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -242,6 +242,12 @@
                     </tr>                    
                 </tbody>
                 </table>
+                 <div class="loaderCard" ng-hide="isMoreItemLoading">
+                      <div class="loaderCardContent">
+                       
+                         <a ng-click="listMoreItems()"> {{ _('Show more...')}}</a>
+                      </div>
+                </div>
                 <div class="loaderCard" ng-show="isMoreItemLoading">
                       <div class="loaderCardContent">
                          <img class="img-responsive " src="/static/img/gloader.gif">
@@ -360,6 +366,13 @@
                   <div class="sectionContent">
                     <span ng-repeat="tag in lead.tags"  draggable ng-drag="dragTagItem(tag,lead)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;"> <a href="" ng-click="removeTag(tag,lead)" class="removeRelatedTag select2-search-choice-close" ></a>  <%= tag.name %></span>
                   </div>
+                </div>
+              </div>
+              
+                <div class="cardElement loaderCard" ng-hide="isMoreItemLoading" data-span="all">
+                <div class="loaderCardContent">
+                   
+                   <a ng-click="ShowMoreItems()"> {{ _('Show more...')}}</a>
                 </div>
               </div>
               <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
