--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -1265,7 +1265,7 @@
                                         </span>
                                       </li>
                                       <li>
-                                        <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(account.updated_at)%> </span>
+                                        <span class="contact-title" >{{_('Last updated:')}}  <%=fromNow(lead.updated_at)%> </span>
                                       </li>
                                     </ul>
                                 </div>  
