new Card design contact list fix #1516
Former-commit-id: 04a322159de7b866b25ff07986ccc8a8cd71a80b [formerly 5f91cb8558bfc5e57f71226ba36ef6dcd1b16e7f] [formerly 0c7ffba4a8762abb47fa5d25e403ca72cbe0d138 [formerly cad432a0f6525deddf8a8a3dff809970e2fec99c]]
Former-commit-id: d819b6941f2fe6d9f4d5c5ecf9050a8af2b7a95c [formerly d233959c6e6bee5b5ded727b5bffb848cef609db]
Former-commit-id: 4fd79f71e894f2cddf903f19e037699fce873d03

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -424,7 +424,7 @@
                 <div class="text">
                 <div class="name " >
                     <a href="/#/accounts/show/<%= account.id %>">
-                        <p class="fittext autoresizeName" max-heit="18"  max-font-size="18" min-font-size="12" text="account.name"></p>
+                        <p class="fittext autoresizeName" max-heit="18"  max-font-size="18" min-font-size="12" text="<%= account.name %>"></p>
                     </a>
                   </div>
                   <div class="pitch">
@@ -443,12 +443,12 @@
                 <div class="clearfix"></div>
               </div>
               <ul class="details list-group">
-                    <li  ng-show="account.phones" style="color: rgb(160, 158, 158);">
+                    <li  ng-show="account.phones" style="color: rgb(160, 158, 158);" class="onelineItem">
                          <i class="fa " ng-class="account.phones.items[0].type=='fax' ? 'fa-fax' :'fa-phone' "></i>   
                          <a href="tel:<%=account.phones.items[0].number%>"> <%=account.phones.items[0].number%> </a>
 
                     </li>
-                    <li  ng-show="account.emails" style="color: rgb(160, 158, 158);">
+                    <li  ng-show="account.emails" style="color: rgb(160, 158, 158);" class="onelineItem">
                         <i class="fa fa-envelope"></i>  
                         <a ng-click="gotosendMail(account.emails.items[0].email, account)" style="cursor: pointer;"><%=account.emails.items[0].email%></a>
                     </li>
@@ -644,7 +644,7 @@
                             <div class="modal-content">
                               <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                <h4 class="modal-title" id="myModalLabel">Send mail</h4>
                               </div>
                               <div class="modal-body">
                                  <form  class="ng-pristine ng-invalid ng-invalid-required">
