--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -75,6 +75,14 @@
       </div>
     </div>
   </div>
+  <div class="loader-container row" ng-show="emailSentMessage">
+      <div class="loader-dialog">
+        <div class="loader-content" style="width: 100%; padding-top: 10px; padding-bottom: 10px;">
+          {{_('Your message has been sent.')}}
+        </div>
+      </div>
+
+</div>
   <div class="dropOut"  ng-show="showUntag" >
     <div class="trash">
       <img alt="delete tag" droppable ng-drop="dropOutTag()" class="" src="/static/img/iotrash.png" >
@@ -267,8 +275,8 @@
               </button>
             </div>
         </div>
-          <div ng-repeat="contact in contacts"  ng-class="{selectedCard: isSelectedCard(contact)}" droppable id="card_<%=$index%>" class="cardElement" ng-drop="dropTag(contact,$index)">
-            <div class="btn-group inCardOptionsBtn">
+          <div ng-repeat="contact in contacts"  ng-class="{selectedCard: isSelectedCard(contact)}" droppable id="card_<%=$index%>" class="cardElement cusCardElement" ng-drop="dropTag(contact,$index)">
+            <div class="btn-group cusOptionsBtn dropup">
               <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown">
                <i class="fa fa-ellipsis-vertical"></i>
               </button>
@@ -283,56 +291,55 @@
                 </li>
               </ul>
             </div>
+           <div class="customCheckbox cusCheckOnCard checkboxOnSmallScreen ">  
+                <input  title="Select Contact" type="checkbox" ng-checked="isSelectedCard(contact)" ng-click="selectCardwithCheck($event,$index,contact)" id="contactCard_<%= $index %>">
+                <label for="contactCard_<%= $index %>" class="labelElement">
+                  <span class="check"></span>
+                  <span class="box"></span>
+                </label>  
+            </div>
             <div class="detailsSection">
               <div class="head">
                 <div class="pic">
-                  
-                  <div class="customCheckbox" class="form-group" style="position: absolute;left: 5px;">  
-                    <input  class="checkboxOnSmallScreen" title="Select Contact" type="checkbox" ng-checked="isSelectedCard(contact)" ng-click="selectCardwithCheck($event,$index,contact)" id="contactCard_<%= $index %>">
-                    <label for="contactCard_<%= $index %>" class="labelElement">
-                      <span class="check"></span>
-                      <span class="box"></span>
-                    </label>  
-                  </div>
                   <a href="/#/contacts/show/<%= contact.id %>" class="startup-link" title="<%=contact.firstname%> <%=contact.lastname%>">
-                    <img ng-hide="contact.profile_img_url"  class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" style=" margin-top: 25px; ">
-                    <img ng-show="contact.profile_img_url"  class="img-responsive profile-photo" ng-src="<%= contact.profile_img_url %>" data-hasqtip="2" style=" margin-top: 25px; ">
+                    <img ng-hide="contact.profile_img_url"  class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
+                    <img ng-show="contact.profile_img_url"  class="img-responsive profile-photo" ng-src="<%= contact.profile_img_url %>" data-hasqtip="2" >
                   </a>
                 </div>
                 <div class="text">
                   <div class="name">
-                    <a href="/#/contacts/show/<%= contact.id %>" class="profile-link">
-                       <%= contact.firstname %> <%=contact.lastname%>
-                    </a>
+                    <a href="/#/contacts/show/<%= contact.id %>" class="profile-link" title="<%=contact.firstname%> <%=contact.lastname%> ">
+                      <p class="fittext autoresizeName" firstname="contact.firstname" lastname="contact.lastname" max-heit="17"  max-font-size="17" min-font-size="12" text="<%=contact.firstname%> <%=contact.lastname%> "></p>
+                    </a>                    
                   </div>
-                  <ul class="contact list-group pitch" style=" max-height: 43px; overflow: hidden; margin-bottom: 0px;" ng-show="contact.title && contact.account.name">
-                      <li ng-show="contact.title">
-                        <a  class="desc" ng-show="contact.title" href="/#/search/type:Contact <%=contact.title%>">
+                  <div class="pitch onelineItem">
+                       <a  class="desc " title="<%=contact.title%>" ng-show="contact.title" href="/#/search/type:Contact <%=contact.title%>">
                           <%=contact.title%>
                         </a>
-                        <span ng-show="contact.account.name + contact.title" class="contact-title">
-                          at
-                        </span>
-                        <a  class="desc" href="/#/accounts/show/<%=contact.account.id%>">
-                          <%=contact.account.name%>
-                        </a>
-                      </li>
-                  </ul>
-                  <ul class="contact list-group" style="overflow: hidden; margin-bottom:0px"  ng-show="contact.title && contact.account.name">
-                    <li class="onelineItem" ng-show="contact.phones" style="color: rgb(160, 158, 158);" title=" <%=contact.phones.items[0].number%>">
-                         <i class="fa " ng-class="account.phones.items[0].type=='fax' ? 'fa-fax' :'fa-phone' "></i> <%=contact.phones.items[0].number%>
-                    </li>
-                    <li class="onelineItem" ng-show="contact.emails" style="color: rgb(160, 158, 158);" title="<%=contact.emails.items[0].email%>">
-                        <i class="fa fa-envelope"></i> <%=contact.emails.items[0].email%>
-                    </li>
-                  </ul>
+                  </div>
                 </div>
                 <div class="clearfix"></div>
               </div>
+              <ul class="details list-group">
+                  <li  ng-show="contact.account.name" style="color: rgb(160, 158, 158);" class="onelineItem">
+                       <i class="fa  fa-building" title="Account name"></i>   
+                       <a  title="<%=contact.account.name%>" href="/#/accounts/show/<%=contact.account.id%>"> <%=contact.account.name%> </a>
+
+                  </li>
+                  <li  ng-show="contact.phones" style="color: rgb(160, 158, 158);" class="onelineItem">
+                       <i class="fa " ng-class="contact.phones.items[0].type=='fax' ? 'fa-fax' :'fa-phone' "></i>   
+                       <a href="tel:<%=contact.phones.items[0].number%>"> <%=contact.phones.items[0].number%> </a>
+
+                  </li>
+                  <li  ng-show="contact.emails" style="color: rgb(160, 158, 158);" class="onelineItem">
+                      <i class="fa fa-envelope"></i>  
+                      <a ng-click="gotosendMail(contact.emails.items[0].email, contact)" style="cursor: pointer;"><%=contact.emails.items[0].email%></a>
+                  </li>
+              </ul>
             </div>
             <div class="tagsSection relatedTags" ng-class="{hidden: contact.tags==null}">
               <div class="sectionContent">                
-                  <span ng-repeat="tag in contact.tags" draggable  ng-drag="dragTagItem(tag,contact)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
+                  <span ng-repeat="tag in contact.tags" draggable  ng-drag="dragTagItem(tag,contact)" class="task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">
                        <a href="" ng-click="removeTag(tag,contact)" class="removeRelatedTag select2-search-choice-close" ></a>
                     <%= tag.name %>
                   </span>             
@@ -613,6 +620,82 @@
         </div>
       </div>
   </div>
+    <div class="modal emailModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true" id="testnonefade">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                <h4 class="modal-title" id="myModalLabel">Send mail</h4>
+                              </div>
+                              <div class="modal-body">
+                                 <form  class="ng-pristine ng-invalid ng-invalid-required">
+                                    <div class="form-group">
+
+                                        <input
+                                            required=""
+                                            class="form-control ng-pristine
+                                            ng-invalid ng-invalid-required" autofocus=""
+                                            type="text"
+                                            placeholder="{{_('To')}}"
+                                            id="messageSubject"
+                                            ng-model="email.to">
+                                            <div class="ccInputs">
+                                              <a href="" ng-click="showCC=true">CC</a>
+                                              <a href="" ng-click="showBCC=true">BCC</a>
+                                            </div>
+                                            
+                                    </div>
+
+                                    <div class="form-group" ng-show="showCC">
+                                        <input
+                                            class="form-control ng-pristine ng-valid"
+                                            autofocus=""
+                                            type="text"
+                                            placeholder="{{_('CC')}}"
+                                            id="messageSubject"
+
+                                            ng-model="email.cc">
+                                    </div>
+                                    <div class="form-group" ng-show="showBCC">
+                                        <input
+                                            class="form-control ng-pristine ng-valid"
+                                            autofocus=""
+                                            type="text"
+
+                                            placeholder="{{_('BCC')}}"
+                                            id="messageSubject"
+                                            ng-model="email.bcc">
+                                    </div>
+                                    <div class="form-group">
+                                        <input
+                                            required=""
+                                            class="form-control ng-pristine ng-invalid ng-invalid-required"
+                                            autofocus=""
+                                            type="text"
+                                            placeholder="{{_('Add a subject')}}"
+                                            id="messageSubject"
+                                            ng-model="email.subject">
+                                    </div>
+                                    <div class="form-group">
+                                        <textarea id="some-textarea" placeholder="{{_('Enter text ...')}}" id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
+                                    </div>
+                                </form>
+                              </div>
+                              <div class="modal-footer">
+                                <input ng-click="sendEmail(email)" ng-disabled="isLoading || !email.to" type="submit" id="btnSendMail" class="btn green" value="{{_('Send')}}">
+                                <div class="form-group attachfile-form-group">
+                                  <a href="#" data-toggle="modal" ng-click="showAttachFilesPicker()"><i class="fa  fa-paperclip"></i> {{_('Attach files')}}</a>
+                                  <ul class="list-unstyled">
+                                      <li ng-repeat="file in sendWithAttachments">
+                                          <%= file.title %>
+                                      </li>
+                                  </ul>
+                                </div>
+                                 
+                              </div>
+                            </div>
+                          </div>
+                        </div>
 
 
 
@@ -643,7 +726,7 @@
           height:'205px'
         });
   $('.waterfall').waterfall({
-        colMinWidth: 290,
+        colMinWidth: 250,
         defaultContainerWidth: 800,
         autoresize: true
   });
