--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -429,8 +429,8 @@
                                                         <div class="form-group row">
                                                           <label class="control-label col-md-3">{{ _('Tagline')}}</label>
                                                           <div class="col-md-9">
-                                                            <p ng-hide="showEditIntroduction" ><%=account.tagline%></p>
-                                                            <textarea ng-hide="!showEditIntroduction" ng-show="account.tagline==NULL" id="noteBody" ng-blur="updateTagline(account)" class="form-control ng-pristine ng-valid" rows="3" ng-model="account.tagline"></textarea>
+                                                            <p ng-hide="showEditIntroduction" ><%=lead.tagline%></p>
+                                                            <textarea ng-hide="!showEditIntroduction" ng-show="lead.tagline==NULL" id="noteBody" ng-blur="updateTagline(lead)" class="form-control ng-pristine ng-valid" rows="3" ng-model="lead.tagline"></textarea>
                                                           </div>
                                                         </div>                                                        
                                                     </div>
@@ -440,8 +440,8 @@
                                                         <div class="form-group row">
                                                           <label class="control-label col-md-3">{{ _('Introduction')}}</label>
                                                           <div class="col-md-9">
-                                                             <p ng-hide="showEditIntroduction"><%=account.introduction%></p>
-                                                            <textarea ng-show="showEditIntroduction||account.introduction==NULL" id="noteBody" ng-blur="updateintro(account)" class="form-control ng-pristine ng-valid" rows="3" ng-model="account.introduction"></textarea>
+                                                             <p ng-hide="showEditIntroduction"><%=lead.introduction%></p>
+                                                            <textarea ng-show="showEditIntroduction||lead.introduction==NULL" id="noteBody" ng-blur="updateintro(lead)" class="form-control ng-pristine ng-valid" rows="3" ng-model="lead.introduction"></textarea>
                                                           </div>
                                                         </div>                                                        
                                                     </div>
