updating social discovery template
Former-commit-id: 8081f4d5df97b4766f01ff0febbbc3ab188e2412 [formerly b0c3cf7397eef39526fcea6315c067175e6a0d70] [formerly 349dc1fe095b7cf36919b7d281b8f5d8b1263b8a [formerly 2d8830229869a4a78a9e2db1840b572eeb446ad4]]
Former-commit-id: af510de8bdfe24ef81ead49291d051884dce28c9 [formerly f9f8066de9e447be6ffe41512c507eb368135b58]
Former-commit-id: b17bf488d428e67436c801313907177eff47f35a

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -244,7 +244,7 @@
           <div class="textbody">
               <div class="pitch">
                 <a href="/#/discovers/show/<%= tweet._source.id %>" target="new"  >
-                <p  class="contact-title"> <%=tweet._source.text%>
+                <p  class="contact-title"> <%= tweet._source.id %> / <%=tweet._source.text%>
                 </p>
               </a>
               </div>
@@ -260,12 +260,12 @@
           <div class="actions-section">
               <div class="twitter-actions pull-right">
                 
-                <a class=""  ng-click="popitup('https://twitter.com/intent/tweet?in_reply_to=<%= tweet.idp %>')"><i class="fa fa-reply"></i></a>
-                <a class="" ng-click="popitup('https://twitter.com/intent/retweet?tweet_id=<%= tweet.idp %>')"><i class="fa fa-retweet"></i></a>
-                <a class="" ng-click="popitup('https://twitter.com/intent/favorite?tweet_id=<%= tweet.idp %>')"><i class="fa fa-star"></i></a>
+                <a class=""  ng-click="popitup('https://twitter.com/intent/tweet?in_reply_to=<%= tweet._source.id %>')"><i class="fa fa-reply"></i></a>
+                <a class="" ng-click="popitup('https://twitter.com/intent/retweet?tweet_id=<%= tweet._source.id %>')"><i class="fa fa-retweet"></i></a>
+                <a class="" ng-click="popitup('https://twitter.com/intent/favorite?tweet_id=<%= tweet._source.id %>')"><i class="fa fa-star"></i></a>
               </div>
               <div class="iogrow-actions pull-left">
-                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet)"><i class="fa fa-road "></i> Mark as lead</a>
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet._source)"><i class="fa fa-road "></i> Mark as lead</a>
               </div>
               <div class="clearfix"></div>
             </div>
