fix mark as lead bug on social discovery
Former-commit-id: bee5cb8b143168fbad8d682098095b49fc463ac5 [formerly 9d0fba496fd948c6bd11ba3cfa7d1854f8059894] [formerly 132f07663807b9730bbd87f809cdd64cdfd79003 [formerly d475e15707a69224c0af0c4a1664072789c18723]]
Former-commit-id: c8fd4a98e61594b8a8414e0476b7f062baa1d6ba [formerly f1430d1d2451942ab0fcfd257f26157a4828c7dd]
Former-commit-id: 1a580989e03198932eb4d30fa79eecc1ef51234a

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -245,15 +245,15 @@
           <div class="textbody">
               <div class="pitch">
                 <a href="/#/discovers/show/<%= tweet._source.id %>" target="new"  >
-                <p  class="contact-title"> <%= tweet._source.id %> / <%=tweet._source.text%>
+                <p  class="contact-title"> <%=tweet._source.text%>
                 </p>
               </a>
               </div>
-             <!--  <div class="pitch">
+              <div class="pitch">
                 <span  class="contact-title" >
                   <%=fromNow(tweet._source.created_at)%>
                 </span>
-              </div> -->
+              </div>
          
               <div class="clearfix"></div>
           </div>
