Deactivate inline edit on discovery tab for topics, fix #1563
Former-commit-id: e3885070ab0c9e361d75f804b11c773933779e9e [formerly 9a9d7254c8cef57c9ce1f804ef7bb9ade12453e2] [formerly 695a1ae25bc8eab20170ef79183fee2910c37d54 [formerly 6b98d6a0cfb866722f6f3ab452a23fb64b3d45b3]]
Former-commit-id: 460f8d340c3b86a9aca3504fb74a6547a7cde69b [formerly 5eef517a4807c6305fe970751c5b7dc3027ab659]
Former-commit-id: bc21589a06f44b3be98f2d04bb70fe33b464d2f6

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -339,7 +339,7 @@
             <div class="row">
             <div class="with-color" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;display: inline-block;float: left;">
                  <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" ng-hide="hideCheckBox"></a> 
-              <span editable-text="tag_item.name"  ng-drag="dragTag(tag_item)" id="iii"  draggable  ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"  
+              <span  ng-drag="dragTag(tag_item)" id="iii"  draggable  ng-dblclick="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)"  
                   ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                
                   <%= tag_item.name %>
