changing design of contact list
Former-commit-id: c53739ac7694c8019a68583ae7e688e4815a93d2 [formerly 9d2b2d0a5f063f149edea40fecb252028e27ff0b] [formerly 6bb4eb197dadb384de809b15eae16b01d7f33f85 [formerly 212e35e8682f782ab98099aa1a9999bcf10fb0bc]]
Former-commit-id: 31920dd2df85655ef9e0c38f89617b944ff2cd7b [formerly 6aec3fd40191c7a8a47dbc22e46597909f1ad395]
Former-commit-id: 9168319c9168596e3449e1517a6470b5b45dcd06

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -759,6 +759,7 @@
   $('#accountCardsContainer').resize(function() {
     var cw = $('#card_0').width();
     console.log(cw);
+    console.log('triggered from account');
     if (cw==0 && localStorage['accountShow']!='list') {
        /*cw=210;*/
         setTimeout(function(){
