--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -160,21 +160,20 @@
                         <th>
                         </th>
                         <th>
-                         Photo
-                        </th>
-                        <th>                          
                             <a href="" ng-click="filterByName()"> {{ _(' Name')}}</a>
                             <i class="fa fa-caret-up" ng-show="fltby == '-firstname'"></i>
                             <i class="fa fa-caret-down" ng-show="fltby == 'firstname'"></i>
                         </th>
-                        <th>                          
-                            <a href="" ng-click="fltby = 'title'; reverse=false"> {{ _(' Title')}}</a>
+                        <th>                                                    
                         </th>
-                        <th >                          
-                            <a href="" ng-click="fltby = 'account.name'; reverse=false"> {{ _(' Account name')}}</a>
+                        <th>                          
+                          <a href=""> {{ _(' Details')}}</a>
+                        </th>
+                        <th>                          
+                          <a href="" ng-click="fltby = 'account.name'; reverse=false"> {{ _(' Company')}}</a>
                         </th>
                         <th>                         
-                            <a href="" ng-click="fltby = 'updated_at'; reverse=false"> {{ _(' Last update')}}</a>
+                            <a href="" ng-click="fltby = 'updated_at'; reverse=false"> {{ _('Updated')}}</a>
                         </th>
                     </tr>
                 </thead>
@@ -197,23 +196,41 @@
                           </a>
                         </td>
                         <td>
-                          <div class="nameContainer" style="max-width:210px">
-                            <a href="/#/contacts/show/<%= contact.id %>" class="profile-link">
-                               <%= contact.firstname %> <%=contact.lastname%>
-                            </a>
+                          <div class="nameContainer" style="max-width:210px; min-width:200px">
+                                <a href="/#/contacts/show/<%= contact.id %>" class="profile-link" style="max-width:210px; font-size: 16px;">
+                                  <span><%= contact.firstname %> <%=contact.lastname%></span>
+                                </a>
+                                <br>
+                                <a href="/#/search/type:Contact <%=contact.title%>" style="color: gray;"> <%= contact.title %></a>
                           </div>
-
                           <div class="tagsContainer relatedTags">
-                             <span ng-repeat="tag in contact.tags"  draggable   ng-drag="dragTagItem(tag,contact)" class="pull-right task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;"> <a href="" ng-click="removeTag(tag,contact)" class="removeRelatedTag select2-search-choice-close" ></a> <%= tag.name %>  </span>
+                             <span ng-repeat="tag in contact.tags"  draggable   ng-drag="dragTagItem(tag,contact)" class=" task-label task-tag badge" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;"> <a href="" ng-click="removeTag(tag,contact)" class="removeRelatedTag select2-search-choice-close" ></a> <%= tag.name %>  </span>
 
                              <div class="clearfix"></div>
                           </div>
                         </td>
                         <td>
-                          <a href="/#/search/type:Contact <%=contact.title%>"> <%= contact.title %></a>
+                          <ul class="list-group">
+                            <li ng-show="contact.phones">
+                               <i class="fa fa-phone"></i>
+                               <a href="tel:<%=contact.phones.items[0].number %>">                                  
+                                <%= contact.phones.items[0].number %>
+                               </a>
+
+                            </li>
+                            <li ng-show="contact.emails">
+                                <i class="fa fa-envelope"></i>
+                                <a ng-click="gotosendMail(contact.emails.items[0].email, contact)" style="cursor:pointer">                                 
+                                  <%= contact.emails.items[0].email %>
+                                 </a>
+                            </li>
+                          </ul>
                         </td>
                         <td style="word-wrap: break-word;max-width:200px">
-                          <%= contact.account.name %>
+                          <i class="fa fa-building" style="color: #169ef4 !important;" ng-show="contact.account.name"></i>
+                          <a ng-show="contact.account.name" title="<%=contact.account.name%>" href="/#/accounts/show/<%=contact.account.id%>" style="cursor:pointer">                                 
+                            <%= contact.account.name %>
+                           </a>
                         </td>
                         <td>
                           <%=fromNow(contact.updated_at)%>
@@ -732,8 +749,9 @@
   });
   $( '#contactCardsContainer' ).resize(function() {   
       var cw = $('#card_0').width();
+      console.log('triggered from contact');
       console.log(cw);
-      if (cw==0 && localStorage['accountShow']!='list') {
+      if (cw==0 && localStorage['contactShow']!='list') {
           setTimeout(function(){
            $('#card_0').trigger( "resize" ); 
           },100);       
