generating social links show on all pages
Former-commit-id: 6c181bf987727997a760025d1819543ebc47d36c [formerly 4f2e80d42609f0fcf247a326beb8fd4dc4da12b2] [formerly e2c24a006cbcf601f2718c36b5b9c7da7fe6f8e9 [formerly 47ce92d58be7a0f1220265ea88c51ade49a37735]]
Former-commit-id: ac6cd7e486429ee77abf8217edeccf578a970b5a [formerly 44050b33846697191a58e2c5772a9f60203822e7]
Former-commit-id: 378becf51d4b70352bc8abecfa5f073c0a22b989

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -404,8 +404,8 @@
                                                 </span>
                                                 <h3>{{_('Social Links')}}</h3>
                                                 <ul ng-hide="showEditSociallink" class="list-unstyled contact-infos showList" align="center">
-                                                        <li ng-repeat="sociallink in infonodes.sociallinks" class="socialLinkItem"> 
-                                                            <a href="<%=prepareUrl(sociallink.url)%>"> <i class="fa fa-<%=urlSource(sociallink.url)%>" title="<%=sociallink.url%>" ></i> <%=sociallink.url%> </a>
+                                                       <li ng-repeat="sociallink in infonodes.sociallinks" class="socialLinkItem"> 
+                                                            <a href="<%=prepareUrl(sociallink.url)%>"><i class="fa fa-<%=urlSource(sociallink.url)%>" title="<%=sociallink.url%>" ></i></a>
                                                             
                                                         </li> 
                                                 </ul>
@@ -416,11 +416,11 @@
                                                         <i class="fa fa-<%=urlSource(sociallink.url)%>"></i>
                                                         <a editshow="showEditSociallink" e-form="socialLinkFormVar" editable-text="sociallink.url" onbeforesave="inlinePatch('Infonode','sociallinks', 'url',sociallink.entityKey,$data)"  editoptions editdataattr="deleteInfonode('<%=sociallink.entityKey%>','sociallinks')" href="<%=prepareUrl(sociallink.url)%>" target="_blank"> <%=sociallink.url%> </a>                                                   
                                                 </li>
-                                                <li ng-show="showEditSociallink|| isEmptyArray(infonodes.sociallinks)">
-                                                        <form  class="form-inline newLeadForm ng-pristine ng-valid" role="form">
+                                                <li ng-show="showEditSociallink|| isEmptyArray(infonodes.sociallinks)">                                                    
+                                                        <form class="form-inline newLeadForm " role="form">
                                                             <div class="input-icon  margin-top-10">
                                                                 <i class="fa fa-globe"></i>
-                                                                <input ng-blur="addSocial(sociallink)" ng-enter="addSocial(sociallink)" ng-model="sociallink.url" class="form-control ng-pristine ng-valid" id="exampleInputEmail2" placeholder="Add a Website">
+                                                                <input ng-blur="addSocial(sociallink)" ng-enter="addSocial(sociallink)" ng-model="sociallink.url" class="form-control " id="exampleInputEmail2" placeholder="Add a social link">
                                                             </div>
                                                         </form>
                                                 </li>
