--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -346,9 +346,7 @@
                                                 <h3>{{_('Social Links')}}</h3>
                                                 <ul ng-hide="showEditSociallink" class="list-unstyled contact-infos showList" align="center">
                                                         <li ng-repeat="sociallink in infonodes.sociallinks" class="socialLinkItem"> 
-                                                            <a href="<%=prepareUrl(sociallink.url)%>"><i class="fa fa-<%=urlSource(sociallink.url)%>" title="<%=sociallink.url%>" ></i>
-                                                             <%=sociallink.url%>
-                                                            </a>
+                                                            <a href="<%=prepareUrl(sociallink.url)%>"><i class="fa fa-<%=urlSource(sociallink.url)%>" title="<%=sociallink.url%>" ></i></a>
                                                             
                                                         </li> 
                                                 </ul>
