fixing css pbm on lead list
Former-commit-id: b63557dde45c2ab64c0a0227d6ffb450722572d7 [formerly c3f0539daf66dd5eab5f290336f6adea0d5e7ccf] [formerly fce3ea93d4bce527fb2624709f6e4ec0ff5fc00b [formerly 07850ccbd5a7f1c6d580c7cfbe7ff5a6cbfd474e]]
Former-commit-id: aebd2711cd8a7ea91dc821099f7daf76cee809c7 [formerly 9e1ed37205a89fa3c906d82b93fb655da46cc7d2]
Former-commit-id: 0fbc3fe40c276346d1a117b07888c4a75dc22684

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -184,11 +184,12 @@
                         <th>
                         </th>
                         <th>
-                        </th>
-                        <th>                          
                             <a href="" ng-click="filterBy('firstname')"> {{ _(' Name')}}</a>
                             <i class="fa fa-caret-up" ng-show="fltby == '-firstname'"></i>
                             <i class="fa fa-caret-down" ng-show="fltby == 'firstname'"></i>
+                        </th>
+                        <th>                          
+
                         </th>
                         <th>                          
                             <a href="" > {{ _(' Details')}}</a>
@@ -224,7 +225,7 @@
                           </a>
                         </td>
                         <td>
-                          <div class="nameContainer" style="max-width:210px; min-width:200px">
+                          <div class="nameContainer" >
                                 <a href="/#/leads/show/<%= lead.id %>" class="profile-link" style="max-width:210px; font-size: 16px;">
                                   <span> <%= lead.firstname %> <%= lead.lastname %></span>
                                 </a>
@@ -258,7 +259,7 @@
                             </li>
                           </ul>
                         </td>
-                        <td style="word-wrap: break-word;max-width:200px">
+                        <td >
                           <i class="fa fa-building" style="color: #169ef4 !important;" ng-show="lead.company"></i>
                           <a ng-show="lead.company" title="<%=lead.company%>" href="/#/search/type:Lead <%=lead.company%>" style="cursor:pointer">                 
                              <%=lead.company%>
