[Sign-up page] -the fiels organization must populated with : Company name,fix #1536
Former-commit-id: dd2144b1829dd581f5778fcfa48a12fd1005d347 [formerly ca4cba32ba91e9e638485a36833f45f374c077ad] [formerly 3c3f9ee7a579002febeafba4f3e7cc46971df9b4 [formerly e3ddfdc2f3891b0fe066cd1a845c8f88787c0a3f]]
Former-commit-id: dad993eab60406311d65879ca16baa96d700bf48 [formerly e2ed8c83acafd4e4291786ff5970a1b20363278a]
Former-commit-id: 67bf61bf561ac2557e9862f113f387d0b288fe12

--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -65,7 +65,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
                           <input required autofocus type="text" name="org_name" placeholder="Type here your organization name"  width="150%">
 
-                          <input required autofocus type="text" name="tags" placeholder="Describe your business: #topic1, #topic2" >
+                         <!--  <input required autofocus type="text" name="tags" placeholder="Describe your business: #topic1, #topic2" > -->
 
                           <input id="signIn" name="signIn" class="maia-button button-download download-mobile get-started" type="submit" value="Start my free trial >">
 
