Delete Tagline field from All show Page ,fix #1569
Former-commit-id: 7bfaf3c566664b52f2d949b47036423fec177983 [formerly 42cdd14f418a2b501d21bdffa5af94878ef333c0] [formerly 802686fb1a2c53c78ef6f76390a64ab90e1f17c0 [formerly ef34ff8fa20c52847c1e81fe26d4796d25872dfd]]
Former-commit-id: d5f90ac2cfa44e039a95ccd3babfda94e957db6d [formerly 43bf091874e2230b2744645d85a3ef476f84bdc5]
Former-commit-id: d09c1cad76bb779990a87909c635b58f61e5add0

--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -276,12 +276,12 @@
                                                 {{_("Edit")}}
                                               </a></i>
                                             </span-->
-                                            <div class="form-group row">
+                                         <!--    <div class="form-group row">
                                                 <label class="control-label col-md-4">{{ _('Tagline')}}</label>
                                                 <div class="col-md-8">
                                                     <input type="text" required id="id_tagline" class="form-control" ng-model="contact.tagline">
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
 
                                         <div class="news-block-tags">
