--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -483,13 +483,13 @@
 
        <div class="news-block-tags">
 
-           <div class="form-group row">
+      <!--      <div class="form-group row">
              <label class="control-label col-md-3">{{ _('Tagline')}}</label>
              <div class="col-md-9">
                <p ng-hide="showEditIntroduction" ><%=account.tagline%></p>
                <textarea ng-hide="!showEditIntroduction" ng-show="account.tagline==NULL" id="noteBody" ng-blur="updateTagline(account)" class="form-control ng-pristine ng-valid" rows="3" ng-model="account.tagline"></textarea>
              </div>
-           </div>                                                        
+           </div> -->                                                        
        </div>
        <div class="news-block-tags">
            <div class="news-block-tags">
